# OpenGLESNative

./: .gitmodules  build.gradle  face_release_key.jks  gradle.properties  keystore.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/wzjing/openglesnative/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/: fragment_sea.glsl  fragment_test.glsl  fragment_texture.glsl  vertex_shader.glsl
app/src/main/cpp/: CMakeLists.txt  gl-engine.cpp  gl-engine.h  gl-utils.cpp  gl-utils.h  native-lib.cpp
app/src/main/java/com/wzjing/openglesnative/: GLESView.kt  MainActivity.kt
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/wzjing/openglesnative/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
paint/: .gitignore  CMakeLists.txt  build.gradle
paint/src/androidTest/java/com/wzjing/paint/: ExampleInstrumentedTest.kt
paint/src/main/: AndroidManifest.xml
paint/src/main/assets/shader/: fire.glsl  fragment_color.glsl  fragment_metal.glsl  fragment_shader.glsl  fragment_shape.glsl  fragment_test.glsl  vertex_shader.glsl
paint/src/main/assets/shaders/: color.glsl  fire.glsl  fragment_shader.glsl  fragment_shader.shader  sea.glsl  vertex_shader.glsl  vertex_shader.shader
paint/src/main/cpp/: CMakeLists.txt  gl-utils.cpp  gl-utils.h  native-lib.cpp  native-lib.h  native-utils.cpp  native-utils.h
paint/src/main/java/com/wzjing/paint/: App.kt  GLESView.kt  MainActivity.kt  MyRenderer.kt  MySurfaceView.kt
paint/src/main/res/values/: colors.xml  styles.xml
paint/src/main/res/values-v21/: styles.xml
paint/src/main/res/values-v23/: styles.xml
paint/src/test/java/com/wzjing/paint/: ExampleUnitTest.kt
